Moved test directory.

--- a/encode_meta_data/tests/Makefile
+++ b/encode_meta_data/tests/Makefile
@@ -16,8 +16,8 @@ BINARIES = code_bdtaunu
 
 # meta data encoder
 META_ENCODER_LIBNAME = -lMetaEncoder
-META_ENCODER_INC_PATH = ../
-META_ENCODER_LIB_PATH = ../lib
+META_ENCODER_INC_PATH = ../../
+META_ENCODER_LIB_PATH = ../../lib
 INCFLAGS += -I $(META_ENCODER_INC_PATH)
 LDFLAGS += -L $(META_ENCODER_LIB_PATH) $(META_ENCODER_LIBNAME)
 
