--- a/encode_meta_data/Makefile
+++ b/encode_meta_data/Makefile
@@ -3,7 +3,8 @@
 
 # compiler
 CXX ?= g++
-CXXFLAGS = -Wall -std=c++11 
+CXXFLAGS = -Wall -std=c++11
+CXXFLAGS += -fPIC
 
 # library name
 LIBNAME = libMetaEncoder.so
